added image directory to project

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   </div>
 
   <!-- How It Works -->
-  <div class = "how-it-works">
+  <div class = "container">
       <h2>How It Works</h2>
       <div class="row">
           <div class="four columns"><img src="images/arrow164.png"></div>
@@ -70,7 +70,7 @@
   </div>
 
   <!-- Features and Services -->
-  <div class = "features-and-services">
+  <div class = "container">
       <h2>Features and Services</h2>
       <div class="row">
           <div class="four columns"><img src="images/silhouette107.png"></div>
@@ -90,7 +90,7 @@
   </div>
 
   <!-- Our Happy Customers -->
-  <div class = "our-happy-customers">
+  <div class = "container">
       <h2>Our Happy Customers</h2>
       <div class="row">
           <div class="four columns"><img src="images/man1.jpg"></div>
@@ -110,7 +110,7 @@
   </div>
 
   <!--cta -->
-  <div class = "cta">
+  <div class = "container">
       <h2>Sign up today and your first month is FREE!</h2>
       <div class="row">
           <div class="eight columns">
