updated css and html

--- a/index.html
+++ b/index.html
@@ -30,24 +30,41 @@
 <body>
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  
-  <!-- Navigation -->
-  <div class = "navbar">
-      <img src="images/coffee_white.png">
-      <ul>
-          <li>SIGN IN</li>
-          <li>Sign Up</li>
-      </ul>
-  </div>
 
-  <!-- Intro -->
-  <div class = "intro">
-      <h1 id="main-headline">Host your content and collaborate</h1>
-          <p class="main-text">Tap into our network of seasoned experts and work with someone who understands 
-          <br>your voice and shares your writing style! We’ll help you build your story, explore all 
-          <br>the angles and guide you to be a better writer!
-          </p>
-  </div>
+  <!-- Header Section -->
+  <header> 
+      <div class = "navbar">  
+            <!-- Logo -->  
+            <a href="#" class="logo">
+                <img src="images/coffee_white.png" alt="">
+            </a>
+            <!-- Navigation -->
+            <nav>
+                <ul>
+                    <li><a href="">SIGN IN</a></li>
+                    <li><a href="">Sign Up</a></li>
+                </ul>
+            </nav>
+      </div>
+      <!-- Slider Section -->
+      <section class = "slider_wrapper">
+          <div class = "slides">
+              <h1 id="main-headline">Host your content and collaborate</h1>
+                  <p class="main-text">Tap into our network of seasoned experts and work with someone who understands 
+                  <br>your voice and shares your writing style! We’ll help you build your story, explore all 
+                  <br>the angles and guide you to be a better writer!
+                  </p>
+          </div>
+          <div id = "slide-dots">
+              <nav>
+                <ul>
+                    <li><a href="">.</a></li>
+                    <li><a href="">.</a></li>
+                </ul>
+            </nav>
+          </div>
+      </section><!-- End of Slider -->
+</header> <!--End of Header -->
 
   <!-- How It Works -->
   <div class = "container">
