--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Your page title here :)</title>
+  <title>Jott.ly</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
@@ -30,45 +30,48 @@
 <body>
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+<!--Intro-->
+<div class = "intro">
+          <!-- Header Section -->
+          <header> 
+              <div class = "navbar">  
+                    <!-- Logo -->  
+                    <a href="#" class="logo">
+                        <img src="images/coffee_white.png" alt="">
+                    </a>
 
-  <!-- Header Section -->
-  <header> 
-      <div class = "navbar">  
-            <!-- Logo -->  
-            <a href="#" class="logo">
-                <img src="images/coffee_white.png" alt="">
-            </a>
-            <!-- Navigation -->
-            <nav>
-                <ul>
-                    <li><a href="">SIGN IN</a></li>
-                    <li><a href="">Sign Up</a></li>
-                </ul>
-            </nav>
-      </div>
-      <!-- Slider Section -->
-      <section class = "slider_wrapper">
-          <div class = "slides">
-              <h1 id="main-headline">Host your content and collaborate</h1>
+                    <!-- Navigation -->
+                    <nav>
+                        <ul>
+                            <li><a href="">Sign in</a></li>
+                            <li><a class="button button-primary" href="#">Sign up</a></li>
+                        </ul>
+                    </nav>
+              </div>
+          </header> <!--End of Header -->
+          <!-- Slider Section -->
+          <div class = "slider-wrapper">
+              <div class = "slides">
+                  <h1 id="main-headline">Host your content and collaborate</h1>
                   <p class="main-text">Tap into our network of seasoned experts and work with someone who understands 
                   <br>your voice and shares your writing style! We’ll help you build your story, explore all 
                   <br>the angles and guide you to be a better writer!
                   </p>
-          </div>
-          <div id = "slide-dots">
-              <nav>
-                <ul>
-                    <li><a href="">.</a></li>
-                    <li><a href="">.</a></li>
-                </ul>
-            </nav>
-          </div>
-      </section><!-- End of Slider -->
-</header> <!--End of Header -->
+              </div>
+              <div id = "slide-dots">
+                  <nav>
+                      <ul>
+                          <li><a href=""><img src="images/radio19.png" alt=""></a></li>
+                          <li><a href=""><img src="images/radio19.png" alt=""></a></li>
+                      </ul>
+                  </nav>
+              </div>
+          </div><!-- End of Slider -->
+  </div><!--End of Intro -->
 
   <!-- How It Works -->
-  <div class = "container">
-      <h2>How It Works</h2>
+  <section class = "container">
+      <h2 id = "how-it-works">How It Works</h2>
       <div class="row">
           <div class="four columns"><img src="images/arrow164.png"></div>
           <div class="four columns"><img src="images/add199.png">.</div>
@@ -84,11 +87,11 @@
           <div class="four columns">2</div>
           <div class="four columns">3</div>
       </div>  
-  </div>
+  </section>
 
   <!-- Features and Services -->
-  <div class = "container">
-      <h2>Features and Services</h2>
+  <section class = "container">
+      <h2 id = "features-and-services">Features and Services</h2>
       <div class="row">
           <div class="four columns"><img src="images/silhouette107.png"></div>
           <div class="four columns"><img src="images/cloud118.png"></div>
@@ -104,11 +107,11 @@
           <div class="four columns"><p>Create your home in the cloud. Manage your content from anywhere! Edit your pages as much as you like and have the peace of mind that it is stored safely in your little place in the cloud. </p></div>
           <div class="four columns"><p>Collaborate with an expert and get guidance on story development, plot structure, character development, tone, voice , dalogue and lots more! </p></div>
       </div>
-  </div>
+  </section>
 
   <!-- Our Happy Customers -->
-  <div class = "container">
-      <h2>Our Happy Customers</h2>
+  <section class = "container">
+      <h2 id = "our-happy-customers">Our Happy Customers</h2>
       <div class="row">
           <div class="four columns"><img src="images/man1.jpg"></div>
           <div class="four columns"><img src="images/woman1.jpg"></div>
@@ -124,11 +127,11 @@
           <div class="four columns"><p>I'm glad I signed up with Jott.ly! These folks know what they’re doing! They look at your writing, understand where you're going, suggest where you can add flare, trim out fluff, and bring your writing to publishable standards!</p></div>
           <div class="four columns"><p>Jott.ly is awesome! If you're looking for personalized, targeted, high-quality content editing services, this is your stop!</p></div>
       </div>
-  </div>
+  </section>
 
   <!--cta -->
-  <div class = "container">
-      <h2>Sign up today and your first month is FREE!</h2>
+  <section class = "container">
+      <h2 id = "cta">Sign up today and your first month is FREE!</h2>
       <div class="row">
           <div class="eight columns">
               <p>Not ready but still want access to our next release?</p>
@@ -137,7 +140,7 @@
               <input class="u-full-width" type="email" placeholder="Enter your email address" id="exampleEmailInput">
           </div>
       </div>
-  </div>
+  </section>
 
   <!--footer-->
   <div class = "footer">
