updated html, css

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
                       </ul>
                   </nav>
               </div>
+              <div class = "overlay"></div>
           </div><!-- End of Slider -->
   </div><!--End of Intro -->
 
