Updated for Skeleton layout from Monday call

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 <!--Intro-->
 <div class = "intro">
+  <div class = "overlay">
           <!-- Header Section -->
           <header> 
               <div class = "navbar">  
@@ -58,67 +59,77 @@
                   <br>the angles and guide you to be a better writer!
                   </p>
               </div>
-              <div id = "slide-dots">
-                  <nav>
-                      <ul>
-                          <li><a href=""><img src="images/radio19.png" alt=""></a></li>
-                          <li><a href=""><img src="images/radio19.png" alt=""></a></li>
-                      </ul>
-                  </nav>
-              </div>
-              <div class = "overlay"></div>
-          </div><!-- End of Slider -->
+          </div>
+      </div><!-- End of Slider -->
   </div><!--End of Intro -->
 
   <!-- How It Works -->
   <section class = "container">
       <h2 id = "how-it-works">How It Works</h2>
       <div class="row">
-          <div class="four columns"><img src="images/arrow164.png"></div>
-          <div class="four columns"><img src="images/add199.png">.</div>
-          <div class="four columns"><img src="images/network17.png"></div>
+        <div class="four columns">
+          <div class="center">
+            <img src="images/arrow164.png" class="hundred">
+            <h5>Submit your project.</h5>
+          </div>
+        </div>
+        <div class="four columns">
+          <div class="center">
+          <img src="images/add199.png" class="hundred">
+          <h5>Choose an editor.</h5>
+          </div>
+        </div>
+        <div class="four columns">
+          <div class="center">
+            <img src="images/network17.png" class="hundred">
+            <h5>Collaborate!</h5>
+          </div>
+        </div>
       </div>
-      <div class="row">
-          <div class="four columns">Submit your project.</div>
-          <div class="four columns">Choose an editor.</div>
-          <div class="four columns">Collaborate!</div>
-      </div>  
+<!-- 
       <div class="row">
           <div class="four columns">1</div>
           <div class="four columns">2</div>
           <div class="four columns">3</div>
       </div>  
-      <hr>
+ --> 
   </section>
 
   <!-- Features and Services -->
   <section class = "container">
       <h2 id = "features-and-services">Features and Services</h2>
       <div class="row">
-          <div class="four columns"><img src="images/silhouette107.png"></div>
-          <div class="four columns"><img src="images/cloud118.png"></div>
-          <div class="four columns"><img src="images/comments16.png"></div>
+          <div class="four columns">
+            <div class="center">
+              <img src="images/silhouette107.png" class="hundred">
+              <h5>Unlimited Pages</h5>
+              <p>There’s no limit to the number pages you can create on Jott.ly! On our platform, you simply won’t run out of space to write! </p>
+            </div>
+          </div>
+          <div class="four columns">
+          <div class="center">
+            <img src="images/cloud118.png" class="hundred">
+            <h5>Hosting</h5>
+            <p>Create your home in the cloud. Manage your content from anywhere! Edit your pages as much as you like and have the peace of mind that it is stored safely in your little place in the cloud. </p>
+            </div>
+          </div>
+          <div class="four columns">
+          <div class="center">
+            <img src="images/comments16.png" class="hundred">
+            <h5>Collaborative Environment</h5>
+            <p>Collaborate with an expert and get guidance on story development, plot structure, character development, tone, voice , dalogue and lots more! </p>
+            </div>
+          </div>
       </div>
-      <div class="row">
-          <div class="four columns">Unlimited Pages</div>
-          <div class="four columns">Hosting</div>
-          <div class="four columns">Collaborative Environment</div>
-      </div>
-      <div class="row">
-          <div class="four columns"><p>There’s no limit to the number pages you can create on Jott.ly! On our platform, you simply won’t run out of space to write!</p></div>
-          <div class="four columns"><p>Create your home in the cloud. Manage your content from anywhere! Edit your pages as much as you like and have the peace of mind that it is stored safely in your little place in the cloud. </p></div>
-          <div class="four columns"><p>Collaborate with an expert and get guidance on story development, plot structure, character development, tone, voice , dalogue and lots more! </p></div>
-      </div>
-      <hr>
   </section>
 
   <!-- Our Happy Customers -->
   <section class = "container">
       <h2 id = "our-happy-customers">Our Happy Customers</h2>
       <div class="row">
-          <div class="four columns"><img src="images/man1.jpg"></div>
-          <div class="four columns"><img src="images/woman1.jpg"></div>
-          <div class="four columns"><img src="images/man2.jpg"></div>
+          <div class="four columns"><img src="images/man1.jpg" class="hundred"></div>
+          <div class="four columns"><img src="images/woman1.jpg" class="hundred"></div>
+          <div class="four columns"><img src="images/man2.jpg" class="hundred"></div>
       </div>
       <div class="row">
           <div class="four columns"><p>David Roberts</p><p>The Plume</p></div>
