corrected alignment, optimized images, added signup button

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                   <h5 class = "pink">David Roberts</h5>  
                   <h6>The Plume</h6>
               </div>
-              <p>After working with Jeff, I feel like my writing has improved a lot! He was very meticulous and held my hand all the way. We're working on my second book now!</p>
+              <p>&#8220;After working with Jeff, I feel like my writing has improved a lot! He was very meticulous and held my hand all the way. We're working on my second book now!&#8221;</p>
           </div><!--div-->
           <div class="four columns">
               <div class="center"> 
@@ -153,7 +153,7 @@
                   <h5 class = "pink">Sarah Hughes</h5>
                   <h6>Valiant Academy</h6>
               </div>
-              <p>I'm glad I signed up with Jott.ly! These folks know what they’re doing! They look at your writing, understand where you're going, suggest where you can add flare, trim out fluff, and bring your writing to publishable standards!</p>  
+              <p>&#8220;I'm glad I signed up with Jott.ly! These folks know what they’re doing! They look at your writing, understand where you're going, suggest where you can add flare, trim out fluff, and bring your writing to publishable standards!&#8221;</p>  
           </div><!--div-->
           <div class="four columns">
               <div class="center">
@@ -162,7 +162,7 @@
                   <h5 class="pink">Michael Dobson</h5>
                   <h6>Bloggers' Circuit</h6>
               </div>
-              <p>Jott.ly is awesome! If you're looking for personalized, targeted, high-quality content editing services, this is your stop!</p>
+              <p>&#8220;Jott.ly is awesome! If you're looking for personalized, targeted, high-quality content editing services, this is your stop!&#8221;</p>
           </div>     
       </div>
   </section>
@@ -170,12 +170,22 @@
   <!--cta -->
    <div class = "overlay-2">
       <section class = "container">
-                <h3 id = "cta">Sign up today and your first month is FREE!</h3>
-                <div class="row">
+                <h3 id = "cta"><span>Sign up today and your first month is FREE!</span><a class="button button-primary" href="#">Sign up</a></h3>
+                <div class="row"> 
+
+
+                   <!--  <div class="eight columns">
+                        <h3 id = "cta"><span>Sign up today and your first month is FREE!</span></h3>
+                    </div>
+                    <div class="eight columns">
+                        <a class="button button-primary" href="#">Sign up</a>
+                    </div>
+                     -->
+
                     <div class="seven columns">
                         <p id = "ready"><i>Not ready but still want access to our next release?</i></p>
                     </div>
-                    <div class="five columns">
+                    <div class="five columns" id = "get-email">
                         <input class="u-full-width" type="email" placeholder="Enter your email address" id="exampleEmailInput">
                     </div>
                 </div>
